[project]
name = "bogo-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aerich[toml]>=0.9.2",
    "bcrypt>=5.0.0",
    "cachetools>=7.1.1",
    "fastapi>=0.136.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.13.3",
    "pyjwt>=2.12.1",
    "tortoise-orm[asyncpg]>=0.25.4",
    "uvicorn>=0.46.0",
]

[tool.aerich]
tortoise_orm = "app.core.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
